# balsa

./: .gitignore  .gitmodules  .projections.json  AGENTS.md  Doxyfile  README.md  compile_flags.txt  conanfile.py  meson.build  meson_options.txt  requirements.txt  setup.sh
core/: meson.build
core/include/balsa/: tensor_types.hpp
core/include/balsa/caching/: prefetcher.hpp  prefetching_serialized_cache.hpp  serializable_cache.hpp
core/include/balsa/concepts/: tensor_shapes.hpp
core/include/balsa/data_structures/: container_of_containers_to_stacked_contiguous_buffer.hpp  stacked_contiguous_buffer.hpp
core/include/balsa/eigen/: container_size.hpp  eigen2span.hpp  interweave.hpp  shape_checks.hpp  slice_filter.hpp  stack.hpp  stl2eigen.hpp  types.hpp  zipper_compat.hpp
core/include/balsa/eigen/concepts/: index_types.hpp  matrix_types.hpp
core/include/balsa/filesystem/: get_relative_path.hpp  prepend_to_filename.hpp
core/include/balsa/logging/: json_sink.hpp
core/include/balsa/lua/: lua_repl.hpp
core/include/balsa/optimization/: gaussian_constraint_elimination.hpp
core/include/balsa/types/: container_size.hpp  get_type_name.hpp  is_specialization_of.hpp
core/include/balsa/zipper/: VectorContainer.hpp  ZipperContainerBase.hpp  stl2zipper.hpp
core/include/balsa/zipper/concepts/: shape_types.hpp  types.hpp
core/src/logging/: json_sink.cpp  stopwatch.cpp
core/src/lua/: lua_repl.cpp
core/src/qt/: spdlog_logger.cpp
core/src/types/: get_type_name.cpp
core/tests/: meson.build  test_iterators.cpp
core/tests/eigen/: test_eigen_eigen2span.cpp  test_eigen_stl2eigen.cpp  test_zipper_compat.cpp
geometry/: meson.build
geometry/include/balsa/geometry/: BoundingBox.hpp  bounding_box.hpp  get_angle.hpp  winding_number.hpp
geometry/include/balsa/geometry/acceleration/: alternating_digital_tree.hpp
geometry/include/balsa/geometry/curves/: volume.hpp
geometry/include/balsa/geometry/lua/: bindings.hpp
geometry/include/balsa/geometry/point_cloud/: bridson_poisson_disk_sampling.hpp  extxyz.hpp  partio_loader.hpp  read_xyz.hpp  smallest_enclosing_sphere_welzl.hpp  uniformly_sample_simplex.hpp  vdb_particle_list.hpp  vdb_points.hpp  write_xyz.hpp
geometry/include/balsa/geometry/polygon_mesh/: triangulate_polygons.hpp
geometry/include/balsa/geometry/quiver/: simplex_transforms.hpp  to_col_vectors.hpp
geometry/include/balsa/geometry/simplex/: circumcenter.hpp  point_in_circumcircle.hpp  volume.hpp
geometry/include/balsa/geometry/simplicial_complex/: boundaries.hpp  circumcenters.hpp  facet_boundaries.hpp  (+1 more)
geometry/src/lua/: geometry_bindings.cpp
geometry/src/point_cloud/: extxyz.cpp  partio_loader.cpp  partio_loader_impl.hpp  read_xyz.cpp  write_xyz.cpp
geometry/src/polygon_mesh/: read_obj_impl.hpp
geometry/tests/: circumcenter_utils.hpp  meson.build  test_bbox_debug.cpp  test_bbox_minimal.cpp  test_bounding_box.cpp  test_circumcenter.cpp  test_earclipping.cpp  test_extxyz.cpp  test_mesh_loading.cpp  test_quiver_bridge.cpp  test_smallest_enclosing_sphere.cpp  test_volume.cpp  test_winding_number.cpp
geometry/tests/assets/: all_types.extxyz  default_props.extxyz  multi_frame.extxyz  silicon_bulk.extxyz
geometry/tools/: mesh_info.cpp  meson.build  particle_converter.cpp  xyz_to_partio.cpp
subprojects/patches/partio/: meson.build  meson_options.txt
tests/: example_vulkan_scene.cpp  example_vulkan_scene.hpp  main.cpp  meson.build  test_bounding_box.cpp  test_circumcenter.cpp  test_earclipping.cpp  test_eigen_eigen2span.cpp  test_eigen_stl2eigen.cpp  test_hdf5.cpp  test_iterators.cpp  test_mesh_loading.cpp  test_scene_graph.cpp  test_smallest_enclosing_sphere.cpp  test_volume.cpp  test_vulkan_window.cpp  test_vulkan_window_glfw.cpp  test_winding_number.cpp
tests/eigen/: meson.build  test_eigen_eigen2span.cpp  test_zipper_compat.cpp
tests/resources/glsl/: glsl.qrc  input_vertex.frag  input_vertex.vert  meson.build
tools/: mesh_info.cpp  meson.build  xyz_to_partio.cpp
visualization/: meson.build
visualization/examples/: bvh_viewer_glfw.cpp  mesh_viewer_glfw.cpp  mesh_viewer_qt.cpp  meson.build  vulkan_scene.cpp  vulkan_scene.hpp  vulkan_window.cpp  vulkan_window_glfw.cpp
visualization/examples/examples/: mesh_viewer.cpp  meson.build
visualization/include/balsa/glm/: zipper_compat.hpp
visualization/include/balsa/scene_graph/: AbstractFeature.hpp  BVHData.hpp  Camera.hpp  Drawable.hpp  DrawableGroup.hpp  FeatureIndex.hpp  ImageData.hpp  Light.hpp  MeshData.hpp  Object.hpp  README.md  abstract_feature.hpp  abstract_grouped_feature.hpp  embedding_traits.hpp  feature_group.hpp  render_layers.hpp  transformation_traits.hpp  types.hpp
visualization/include/balsa/visualization/: README.md  colormap_list.hpp  image_io.hpp  input_handler.hpp
visualization/resources/: meson.build
visualization/resources/glsl/: flat.vert  glsl.qrc  image.frag  image.vert  mesh.frag  mesh.vert  meson.build
visualization/src/: image_io.cpp
visualization/src/glfw/vulkan/: film.cpp  window.cpp
visualization/src/glm/: zipper_compat.cpp
visualization/src/qt/: SceneGraphModel.cpp  SceneGraphWidget.cpp  lua_repl_widget.cpp  mesh_controls_widget.cpp  vertical_tab_widget.cpp
visualization/src/qt/mesh_viewer/: main_window.cpp  widget.cpp
visualization/src/qt/vulkan/: film.cpp  window.cpp
visualization/src/scene_graph/: BVHData.cpp  Camera.cpp  DrawableGroup.cpp  FeatureIndex.cpp  ImageData.cpp  MeshData.cpp  Object.cpp
visualization/src/shaders/: abstract_shader.cpp  flat.cpp
visualization/src/vulkan/: film.cpp  image_pipeline.cpp  image_scene.cpp  imgui_integration.cpp  mesh_buffers.cpp  mesh_drawable.cpp  mesh_pipeline.cpp  mesh_scene.cpp  native_film.cpp  pipeline.cpp  scene_base.cpp  texture.cpp  vulkan_buffer.cpp  vulkan_image_drawable.cpp  vulkan_mesh_drawable.cpp  window.cpp
visualization/src/vulkan/imgui/: image_controls_panel.cpp  lua_repl_panel.cpp  mesh_controls_panel.cpp
visualization/tests/: meson.build  test_scene_graph.cpp
visualization/tools/: image_viewer_glfw.cpp  mesh_viewer_glfw.cpp  mesh_viewer_qt.cpp  meson.build
(+253 files in other folders)
