option('eltopo', type : 'boolean', value : true, description : 'Should we build the el topo submodule')
option('embree', type: 'boolean', value: false, description: 'Use embree')
option('openvdb', type : 'boolean', value : false, description : 'Build openvdb stuff')
option('pngpp', type : 'boolean', value : true, description : 'Use PNG++ for screenshots')
option('json', type : 'boolean', value : true, description : 'Use json')
option('protobuf', type : 'boolean', value : true, description : 'Use protobuf')
option('partio', type : 'boolean', value : true, description : 'Use partio')
option('imgui', type : 'boolean', value : true, description : 'Use imgui')
option('igl', type : 'boolean', value : true, description : 'Use libigl')

option('visualization', type : 'boolean', value : true, description : 'Build visualization library')
option('glfw', type : 'boolean', value : true, description : 'Use glfw')
