option('testing', type: 'boolean', value: true, description: 'enable unit testing')
option('examples', type: 'boolean', value: true, description: 'enable example targets')

option('embree', type: 'boolean', value: false, description: 'Use embree')
option('openvdb', type : 'boolean', value : false, description : 'Build openvdb stuff')
option('json', type : 'boolean', value : true, description : 'Use json')
option('protobuf', type : 'boolean', value : false, description : 'Use protobuf')
option('partio', type : 'boolean', value : false, description : 'Use partio')
option('imgui', type : 'boolean', value : true, description : 'Use imgui')
option('alembic', type : 'boolean', value : false, description : 'Use alembic')
option('perfetto', type : 'boolean', value : false, description : 'Use perfetto')

option('visualization', type : 'boolean', value : true, description : 'Build visualization library')
option('glfw', type : 'boolean', value : true, description : 'Use glfw')
option('qt', type : 'boolean', value : true, description : 'Use qt')
option('quiver', type : 'boolean', value : true, description : 'Use quiver simplicial complex mesh library')
