# PARTIO SOFTWARE
# Copyright 2010 Disney Enterprises, Inc. All rights reserved
# 
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
# 
# * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
# 
# * Redistributions in binary form must reproduce the above copyright
# notice, this list of conditions and the following disclaimer in
# the documentation and/or other materials provided with the
# distribution.
# 
# * The names "Disney", "Walt Disney Pictures", "Walt Disney Animation
# Studios" or the names of its contributors may NOT be used to
# endorse or promote products derived from this software without
# specific prior written permission from Walt Disney Pictures.
# 
# Disclaimer: THIS SOFTWARE IS PROVIDED BY WALT DISNEY PICTURES AND
# CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING,
# BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS
# FOR A PARTICULAR PURPOSE, NONINFRINGEMENT AND TITLE ARE DISCLAIMED.
# IN NO EVENT SHALL WALT DISNEY PICTURES, THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
# PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND BASED ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGES.
Doxygen_dep = dependency('Doxygen')
if 'DOXYGEN_FOUND'
  # configure_file([cmake_current_source_dir, '/Doxyfile.in', cmake_current_binary_dir, '/Doxyfile', '@ONLY'])
  # file(['GLOB', 'DOCUMENTED_FILES', project_source_dir, '/src/lib/*.h'])
  # add_custom_command(['OUTPUT', cmake_current_binary_dir, '/doxygen.txt', 'COMMAND', doxygen_executable, cmake_current_binary_dir, '/Doxyfile', '>doxygen.txt', 'WORKING_DIRECTORY', cmake_current_binary_dir, 'DEPENDS', cmake_current_source_dir, '/Doxyfile.in'])
  # add_custom_target(['doc', 'ALL', 'DEPENDS', cmake_current_binary_dir, '/doxygen.txt', documented_files])
  # install(['DIRECTORY', cmake_current_binary_dir, '/html', 'DESTINATION', cmake_install_docdir])
endif
